Refactor FeedbackService: reemplazar excepciones genéricas por FeedbackNotFoundException para mejorar el manejo de errores; agregar clase FeedbackNotFoundException.