@@ -5,16 +5,17 @@ import com.udea.fe.DTO.NotificationDTO;
 import com.udea.fe.entity.Feedback;
 import com.udea.fe.entity.Submission;
 import com.udea.fe.entity.User;
+import com.udea.fe.exception.FeedbackNotFoundException;
 import com.udea.fe.repository.FeedbackRepository;
 import com.udea.fe.repository.SubmissionRepository;
 import com.udea.fe.repository.UserRepository;
 import jakarta.transaction.Transactional;
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
+
+import java.time.LocalDateTime;
+import java.util.List;
 
 @Service
 @Transactional
@@ -33,26 +34,20 @@ public class FeedbackService {
     Submission submission = submissionRepository
       .findById(feedbackDTO.getSubmissionId())
       .orElseThrow(() ->
-        new RuntimeException(
-          "Entrega no encontrada con id: " + feedbackDTO.getSubmissionId() + ""
-        )
+        new FeedbackNotFoundException("Entrega no encontrada con id: " + feedbackDTO.getSubmissionId())
       );
     feedback.setSubmission(submission);
 
     User createdBy = userRepository
       .findById(feedbackDTO.getCreatedById())
-      .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
+      .orElseThrow(() -> new FeedbackNotFoundException("Usuario no encontrado"));
     feedback.setCreatedBy(createdBy);
 
     if (feedbackDTO.getParentFeedbackId() != null) {
       Feedback parentFeedback = feedbackRepository
         .findById(feedbackDTO.getParentFeedbackId())
         .orElseThrow(() ->
-          new RuntimeException(
-            "Retroalimentacion padre no encontrada con id: " +
-            feedbackDTO.getParentFeedbackId() +
-            ""
-          )
+          new FeedbackNotFoundException("Retroalimentación padre no encontrada con id: " + feedbackDTO.getParentFeedbackId())
         );
       feedback.setParentFeedback(parentFeedback);
     }
@@ -77,12 +72,10 @@ public class FeedbackService {
       .map(feedback -> {
         feedback.setComment(feedbackDTO.getComment());
         feedback.setRating(feedbackDTO.getRating());
-        // No se modifica: task, createdBy, parentFeedback
-        Feedback updated = feedbackRepository.save(feedback);
-        return modelMapper.map(updated, FeedbackDTO.class);
+        return modelMapper.map(feedbackRepository.save(feedback), FeedbackDTO.class);
       })
       .orElseThrow(() ->
-        new RuntimeException("Retroalimentación no encontrada con id: " + id)
+        new FeedbackNotFoundException("Retroalimentación no encontrada con id: " + id)
       );
   }
 
@@ -91,7 +84,7 @@ public class FeedbackService {
       .findById(id)
       .map(feedback -> modelMapper.map(feedback, FeedbackDTO.class))
       .orElseThrow(() ->
-        new RuntimeException("Retroalimentación no encontrada con id: " + id)
+        new FeedbackNotFoundException("Retroalimentación no encontrada con id: " + id)
       );
   }
 
@@ -100,14 +93,12 @@ public class FeedbackService {
       .findAll()
       .stream()
       .map(feedback -> modelMapper.map(feedback, FeedbackDTO.class))
-      .collect(Collectors.toList());
+      .toList(); // toList() reemplaza collect(Collectors.toList())
   }
 
   public void deleteFeedback(Long id) {
     if (!feedbackRepository.existsById(id)) {
-      throw new RuntimeException(
-        "Retroalimentación no encontrada con id: " + id
-      );
+      throw new FeedbackNotFoundException("Retroalimentación no encontrada con id: " + id);
     }
     feedbackRepository.deleteById(id);
   }
@@ -121,6 +112,6 @@ public class FeedbackService {
         feedback.getSubmission().getSubmissionId().equals(submissionId)
       )
       .map(feedback -> modelMapper.map(feedback, FeedbackDTO.class))
-      .collect(Collectors.toList());
+      .toList(); // también reemplazado aquí
   }
 }
